--- a/style.css
+++ b/style.css
@@ -288,7 +288,7 @@
     top: 10px;
     left: calc(100% - 74px);
     cursor: pointer;
-    background: var(--dark-grey);
+    background: var(--grey);
     color: var(--console);
     border-radius: 7px;
     z-index: 3;
